 export class Product {

}